// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should input is disabled has an error and input has an invalid class has a placeholder 1`] = `
<div>
  <input
    autocomplete="off"
    class="input error"
    data-testid="inputTestId"
    disabled=""
    id="input"
    name="input"
    placeholder="Your email"
    type="text"
    value=""
  />
</div>
`;

exports[`Input component should input is disabled has an error and input has an invalid class has no placeholder 1`] = `
<div>
  <input
    autocomplete="off"
    class="input error"
    data-testid="inputTestId"
    disabled=""
    id="input"
    name="input"
    type="text"
    value=""
  />
</div>
`;

exports[`Input component should input is disabled has no error has a placeholder 1`] = `
<div>
  <input
    autocomplete="off"
    class="input"
    data-testid="inputTestId"
    disabled=""
    id="input"
    name="input"
    placeholder="Your email"
    type="text"
    value=""
  />
</div>
`;

exports[`Input component should input is disabled has no error has no placeholder 1`] = `
<div>
  <input
    autocomplete="off"
    class="input"
    data-testid="inputTestId"
    disabled=""
    id="input"
    name="input"
    type="text"
    value=""
  />
</div>
`;

exports[`Input component should input is not disabled has an error and input has an invalid class has a placeholder 1`] = `
<div>
  <input
    autocomplete="off"
    class="input error"
    data-testid="inputTestId"
    id="input"
    name="input"
    placeholder="Your email"
    type="text"
    value=""
  />
</div>
`;

exports[`Input component should input is not disabled has an error and input has an invalid class has no placeholder 1`] = `
<div>
  <input
    autocomplete="off"
    class="input error"
    data-testid="inputTestId"
    id="input"
    name="input"
    type="text"
    value=""
  />
</div>
`;

exports[`Input component should input is not disabled has no error has a placeholder 1`] = `
<div>
  <input
    autocomplete="off"
    class="input"
    data-testid="inputTestId"
    id="input"
    name="input"
    placeholder="Your email"
    type="text"
    value=""
  />
</div>
`;

exports[`Input component should input is not disabled has no error has no placeholder 1`] = `
<div>
  <input
    autocomplete="off"
    class="input"
    data-testid="inputTestId"
    id="input"
    name="input"
    type="text"
    value=""
  />
</div>
`;
